24 March 2014: Wouter
	- Removed files obsoleted by patch from Pavel Simerda:
	  contrib/01-dnssec-trigger-hook-new_nm
	  (replaced with dnssec-trigger-script and 01-dnssec-trigger)
	  fedora/dnssec-triggerd.service
	  (new version in contrib)
	  fedora/dnssec-triggerd-resolvconf-handle.service
	  (handled by dnssec-triggerd.service directly)
	  fedora/dnssec-trigger.spec
	  (spec files are maintained separately)
	  fedora/dnssec-triggerd-keygen.service
	  (new version in contrib)
	  fedora/dnssec-triggerd-resolvconf-handle.sh
	  (handled by dnssec-trigger-script directly)
	  fedora/dnssec-triggerd.init
	  (only used in epel6 which hasn't been updated for ages)

21 March 2014: Wouter
	- Patch from Pavel Simerda: better integration with NetworkManager and
	  distributions, added in contrib.

13 February 2014: Wouter
	- Patches from Tomass Hozza; Explicitly-use-Python2-interpreter,
	  Fix-situation-when-connection-is-going-down,
	  resolv.conf-backup-script-restart-NM-to-handle-resolv.conf,
	  Update-systemd-service-files-to-latest-version-used.

7 February 2014: Wouter
	- Fix #551: Change Regents to Copyright holder in License.

28 January 2014: Wouter
	- Added patch to networkmanager dispatcher script and also
	  an example dnssec.conf file from Tomas Hozza.

21 January 2014: Wouter
	- Added contrib networkmanager dispatcher script from Tomas Hozza.

25 November 2013: Wouter
	- Added fedora/dnssec-trigger-resolvconf-handle.sh from Tomas
	  Hozza, that will backup and restore resolv.conf for use in
	  systemd.service scripts and networkmanager scripts.

15 November 2013: Wouter
	- Patch from Tomas Hozza that improves text in dialogs (on linux).

14 November 2013: Wouter
	- Fix NM dispatcher script to work with NM >= 0.9.9.0 (Thanks Tomas
	  Hozza).

26 August 2013: Wouter
	- Fix#522: Errors found by static analysis of source from Tomas Hozza.

6 August 2013: Wouter
	- Patch from Tomas Hozza to improve the networkmanager connect